--- a/web_frontend/cloudscheduler/csv2/static/csv2/navigation.css
+++ b/web_frontend/cloudscheduler/csv2/static/csv2/navigation.css
@@ -128,5 +128,8 @@ select {
 
 .spacer{
   padding-left:20px;
+}
 
+#group {
+  width: 98;
 }
