--- a/web_frontend/cloudscheduler/csv2/static/csv2/status.css
+++ b/web_frontend/cloudscheduler/csv2/static/csv2/status.css
@@ -434,7 +434,6 @@
 
 body.status-nav{
   position: absolute;
-  top: 62px;
   padding-bottom: 129px;
   overflow: auto;
 }
